@@ -1,4 +1,6 @@
 0.17
+ - Move inicialization of page begin to better place after actions phase.
+   It's possible to implement _process_actions without inheritance of it.
 
 0.16 2024-04-21T00:08:47+02:00
  - Add handling of css_src().
